--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
                         <img src="insta Галя Женя Рось.png" class="gallery-image active" alt="Photoshop Work 1">
                         <img src="s.png" class="gallery-image" alt="Photoshop Work 2">
                         <img src="did.png" class="gallery-image" alt="Photoshop Work 3">
-                        <img src="Снимок экрана 2024-12-28 в 3.22.36 AM.png" class="gallery-image" alt="Photoshop Work 4">
+                        <img src="AM.png" class="gallery-image" alt="Photoshop Work 4">
                         <img src="Монтажная область 1.png" class="gallery-image" alt="Photoshop Work 5">
-                        <img src="візитка — копия.png" class="gallery-image" alt="Photoshop Work 6">
-                        <img src="візитка2 — копия.png" class="gallery-image" alt="Photoshop Work 7">
+                        <img src="02.png" class="gallery-image" alt="Photoshop Work 6">
+                        <img src="05.png" class="gallery-image" alt="Photoshop Work 7">
                         <button class="next-btn">&#10095;</button>
                     </div>
                 </div>
