--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
             font-size: 1.5rem;
             margin-bottom: 10px;
         }
+     (max-width: 768px) {
+    .gallery-image, .gallery-video {
+        width: 90%; /* Ширина зображень 90% для вузьких екранів */
+    }
+}
 
         .gallery-image, .gallery-video {
             width: 30%;
