--- a/index.html
+++ b/index.html
@@ -24,11 +24,7 @@
             font-size: 1.5rem;
             margin-bottom: 10px;
         }
-     (max-width: 768px) {
-    .gallery-image, .gallery-video {
-        width: 90%; /* Ширина зображень 90% для вузьких екранів */
-    }
-}
+        
 
         .gallery-image, .gallery-video {
             width: 30%;
@@ -85,6 +81,50 @@
     a:hover {
         text-decoration: underline; /* Підкреслення при наведенні */
     }
+    .modal {
+    display: none; /* Спочатку приховано */
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.8); /* Темне тло з прозорістю */
+}
+
+.modal-content {
+    margin: auto;
+    display: block;
+    max-width: 90%; /* Максимальна ширина зображення */
+    max-height: 90%; /* Максимальна висота зображення */
+    animation: fadeIn 0.3s ease-in-out;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+.close-btn {
+    position: absolute;
+    top: 20px;
+    right: 35px;
+    color: #fff;
+    font-size: 40px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.close-btn:hover {
+    color: #bbb;
+}
+
     </style>
 </head>
 <body>
@@ -107,6 +147,10 @@
                 <p><h2>Мої роботи</h2></p>
                     <div class="main-article__content">
                         <h2 class="main-article__header">Про мене:</h2>
+                        <div id="image-modal" class="modal">
+                            <span class="close-btn">&times;</span>
+                            <img class="modal-content" id="modal-image">
+                        </div>
 
                 <!-- Photoshop Section -->
                 <div class="work-section">
@@ -211,6 +255,36 @@
 
             updateGallery();
         });
+    document.addEventListener('DOMContentLoaded', () => {
+        const modal = document.getElementById('image-modal');
+        const modalImg = document.getElementById('modal-image');
+        const closeBtn = document.querySelector('.close-btn');
+
+        // Вибираємо всі зображення галереї
+        const galleryImages = document.querySelectorAll('.gallery-image');
+
+        // Додаємо події "click" для кожного зображення
+        galleryImages.forEach(image => {
+            image.addEventListener('click', () => {
+                modal.style.display = 'block'; // Показати модальне вікно
+                modalImg.src = image.src; // Встановити джерело зображення
+            });
+        });
+
+        // Закриття модального вікна
+        closeBtn.addEventListener('click', () => {
+            modal.style.display = 'none';
+        });
+
+        // Закриття при натисканні за межами зображення
+        modal.addEventListener('click', (e) => {
+            if (e.target === modal) {
+                modal.style.display = 'none';
+            }
+        });
+    });
+</script>
+
     </script>
 </body>
 </html>
